maholit-club-web/element-service.yml
apiVersion: v1
kind: Service
metadata:
  name: element
  namespace: maholit-club-web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: element
