maholit-club-web/synapse-service.yml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: maholit-club
spec:
  type: ClusterIP
  ports:
  - port: 8008
  selector:
    app: synapse
