maholit-club-web/element-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maholit-club-web
  namespace: maholit-club-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: maholit.club
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - maholit.club
    secretName: maholit-club-tls
  rules:
  - host: maholit.club
    http:
      paths:
      - backend:
          service:
            name: element
            port:
              number: 8080
        path: /
        pathType: Prefix
